<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.ui.authentication.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_with_your_email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title_guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@id/email_field"
            app:layout_constraintStart_toStartOf="@id/email_field"
            app:layout_constraintTop_toBottomOf="@id/register_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_field"
            style="@style/Reminder_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_small"
            android:text="@={viewModel.email}"
            app:layout_constraintTop_toBottomOf="@id/email_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@id/password_field"
            app:layout_constraintStart_toStartOf="@id/password_field"
            app:layout_constraintTop_toBottomOf="@id/email_field" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_field"
            style="@style/Reminder_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/padding_small"
            android:text="@={viewModel.password}"
            app:layout_constraintTop_toBottomOf="@id/password_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:background="@drawable/bg_solid_button"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:enabled="@{viewModel.canRegister}"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_field" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_social_media_button"
            android:background="@drawable/bg_stroke_button"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/register_with_social_media"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>