...
            app:layout_constraintGuide_percent=".2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_nreminder_app"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textSize="32sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title_guideline" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:background="@drawable/bg_solid_button"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="@dimen/margin_very_large"
            app:layout_constraintEnd_toEndOf="parent"
...
