...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/enter_your_information_to_login"
            android:textAlignment="center"
...
            android:inputType="textPassword"
            android:padding="@dimen/padding_small"
            android:text="@={viewModel.password}"
            app:layout_constraintTop_toBottomOf="@id/password_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter_button"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_solid_button"
            android:layout_marginTop="@dimen/margin_medium"
            android:enabled="@{viewModel.canLogin}"
            android:text="@string/enter"
...
