...
                android:text="@{item.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
...
